<resources>
    <string name="app_name">SIOS ABSENSI SIL</string>
    <string name="barcode">Barcode</string>
    <string name="network_error">Error Connecting to Server</string>
    <string name="scanbarcode">SCAN QR-CODE</string>
    <string name="copyright">Hak Cipta PT.SRIKANDI INTI LESTARI  © 2018-2019, \nDeveloped by NiagaIT.com</string>
    <string name="scantext">Klik untuk memulai Scan</string>
    <string name="welcome">SELAMAT DATANG  DI APLIKASI SIDUK ONLINE PENGADILAN  SE-WILAYAH HUKUM PENGADILAN TINGGI MEDAN</string>
    <string name="radio_company">Company</string>
    <string name="radio_employee">Employee</string>
    <string name="edit_username">Username</string>
    <string name="edit_password">Password</string>
    <string name="value_login">Login</string>
    <string name="value_logout">Logout</string>
    <string name="title_activity_goal">GoalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="value_compay">Company</string>
    <string name="value_username">Username</string>
    <string name="server_error">Internal Server Error</string>
    <string name="username_empty">Username required</string>
    <string name="password_empty">Password required</string>
    <string name="username_password_validation">Wrong Username or password</string>
    <string name="rekap_absen">Rekap Absen</string>
    <string name="rekap_pegawai">Rekap Pegawai</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="name">Nama Lengkap</string>
    <string name="no_identitas">No Identitas</string>
    <string name="kota_lahir">Kota Lahir</string>
    <string name="tgl_lahir">Tanggal Lahir</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="agama">Agama</string>
    <string name="no_hp">No Handphone</string>
    <string name="email">Email</string>
    <string name="ip_absen">IP Absen</string>
    <string name="desc_absen">Keterangan Absen</string>
    <string name="dialog_message_failed">Proses Absen Gagal diproses</string>
    <string name="dialog_title">Proses Absen</string>
    <string name="dialog_message_success">Proses Absen Berhasil diproses</string>
    <string name="copyright2">SIOS ABSENSI \nHak Cipta PT.SRIKANDI INTI LESTARI © 2018-2019, \nDeveloped by NiagaIT.com</string>
    <string name="dialog_qr_not_valid">QR-Code tidak valid</string>
    <string name="dialog_qr">QR-Code</string>
    <string name="edit_password_old">Old Password</string>
    <string name="value_change">Change Password</string>
    <string name="value_verify">Verify</string>
    <string name="edit_password_new">New Password</string>
    <string name="edit_password_new_confirm">Confirm New Password</string>
    <string name="change_password">Change Password</string>
    <string name="chooice_type">Pilih Jenis Absen</string>
</resources>
