<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.teknologi.labakaya.siosabsensiandroid.activity.ChangePasswordActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha=".30"
        android:background="@drawable/bg_sios">
    </FrameLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:focusableInTouchMode="true">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/icon"
            android:layout_gravity="center"/>

        <LinearLayout
            android:id="@+id/layout_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/edit_password_old"
                android:hint="@string/edit_password_old"
                android:singleLine="true"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"/>

            <Button
                android:id="@+id/btn_verify"
                android:layout_width="match_parent"
                android:text="@string/value_verify"
                android:layout_margin="5dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">
            <EditText
                android:id="@+id/edit_password_new"
                android:hint="@string/edit_password_new"
                android:singleLine="true"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"/>

            <EditText
                android:id="@+id/edit_password_new_confirm"
                android:hint="@string/edit_password_new_confirm"
                android:singleLine="true"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"/>

            <Button
                android:id="@+id/btn_change"
                android:layout_width="match_parent"
                android:text="@string/value_change"
                android:layout_margin="5dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
