<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.teknologi.sios.absensi.activity.LoginActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:focusableInTouchMode="true">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/icon"
                android:layout_gravity="center"/>

            <RadioGroup
                android:id="@+id/radio_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center">
                <RadioButton
                    android:layout_margin="20dp"
                    android:padding="5dp"
                    android:id="@+id/radio_employee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_employee"
                    android:checked="true" />

                <RadioButton
                    android:layout_margin="20dp"
                    android:padding="5dp"
                    android:id="@+id/radio_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_company"
                    android:checked="false"/>
            </RadioGroup>

            <EditText
                android:id="@+id/edit_username"
                android:hint="@string/edit_username"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"/>

            <EditText
                android:id="@+id/edit_password"
                android:hint="@string/edit_password"
                android:singleLine="true"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_login"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:text="@string/value_login"
                    android:layout_margin="5dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"/>
                <!--<Button-->
                <!--android:id="@+id/btn_logout"-->
                <!--android:layout_weight="1"-->
                <!--android:layout_width="0dp"-->
                <!--android:text="@string/value_logout"-->
                <!--android:layout_margin="10dp"-->
                <!--android:layout_height="wrap_content" />-->
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</android.support.design.widget.CoordinatorLayout>