<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.teknologi.sios.absensi.activity.MainActivity"
    android:background="@color/colorPrimary">
    <TextView
        android:padding="20dp"
        android:text="@string/welcome"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="15dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginBottom="50dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:padding="10dp"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:src="@drawable/pt_medan"
                android:elevation="2dp"
                android:layout_margin="10dp"/>

            <LinearLayout
                android:id="@+id/btn_scann"
                android:background="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="5dp">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/barcode"/>
                <TextView
                    android:padding="10dp"
                    android:gravity="center"
                    android:text="@string/scantext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:src="@drawable/siduk"
                android:layout_width="match_parent"
                android:layout_height="100dp" />
            <TextView
                android:gravity="center|bottom"
                android:text="@string/copyright"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"/>
        </LinearLayout>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>