<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <android.support.v7.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:elevation="@dimen/cardview_default_radius"
                android:layout_margin="10dp">

                <ImageView
                    android:id="@+id/img_user"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:elevation="4dp"
                    android:src="@drawable/icon" />
            </android.support.v7.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"/>
            <EditText
                android:id="@+id/edit_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:editable="false"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_identitas"/>
            <EditText
                android:id="@+id/edit_no_identitas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/no_identitas"
                android:editable="false"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/kota_lahir"/>
                    <EditText
                        android:id="@+id/edit_kota_lahir"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/kota_lahir"
                        android:editable="false"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tgl_lahir"/>
                    <EditText
                        android:id="@+id/edit_tgl_lahir"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tgl_lahir"
                        android:editable="false"/>
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/agama"/>
                    <EditText
                        android:id="@+id/edit_agama"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/agama"
                        android:editable="false"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/gender"/>
                    <EditText
                        android:id="@+id/edit_jenis_kelamin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/gender"
                        android:editable="false"/>
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email"/>
                    <EditText
                        android:id="@+id/edit_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:editable="false"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no_hp"/>
                    <EditText
                        android:id="@+id/edit_no_hp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/no_hp"
                        android:editable="false"/>

                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ditugaskan Pada"
                android:textColor="@color/colorSuccess"/>
            <EditText
                android:id="@+id/edit_company_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/value_compay"
                android:editable="false"
                android:textStyle="bold"
                android:textSize="13dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Jabatan"
                android:textColor="@color/colorSuccess"/>
            <EditText
                android:id="@+id/edit_jabatan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/value_compay"
                android:editable="false"
                android:textStyle="bold"
                android:textSize="13dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Mulai Penugasan"
                        android:textColor="@color/colorSuccess"/>
                    <EditText
                        android:id="@+id/edit_mulai_penugasan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Mulai Penugasan"
                        android:editable="false"
                        android:textStyle="bold"
                        android:textSize="13dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Akhir Penugasan"
                        android:textColor="@color/colorSuccess"/>
                    <EditText
                        android:id="@+id/edit_akhir_penugasan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Akhir Penugasan"
                        android:editable="false"
                        android:textStyle="bold"
                        android:textSize="13dp"/>

                </LinearLayout>
            </LinearLayout>

            <!--<View-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="5dp"/>-->
            <!---->
            <!--<TextView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/ip_absen"-->
                <!--android:textColor="@color/colorSuccess"/>-->
            <!--<EditText-->
                <!--android:id="@+id/edit_ip_absen"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:hint="@string/ip_absen"-->
                <!--android:editable="false"-->
                <!--android:textStyle="bold"-->
                <!--android:textSize="13dp"/>-->

            <!--<TextView-->
                <!--android:textStyle="bold"-->
                <!--android:id="@+id/tv_absen"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/desc_absen"-->
                <!--android:textColor="@android:color/holo_red_dark"/>-->

            <Button
                android:layout_marginTop="10dp"
                android:id="@+id/btn_absen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="absen sekarang"
                android:enabled="true"
                android:background="@color/colorSuccess"
                android:textColor="@android:color/white"/>
        </LinearLayout>
    </ScrollView>
    <include layout="@layout/bottom_sheet"
        tools:visibility="gone"/>
</android.support.design.widget.CoordinatorLayout>